--- a/deliveryapi/composer.json
+++ b/deliveryapi/composer.json
@@ -16,7 +16,8 @@
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "lichtner/fluentpdo": "^1.1"
+        "lichtner/fluentpdo": "^1.1",
+        "firebase/php-jwt": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
