--- a/deliveryapi/composer.json
+++ b/deliveryapi/composer.json
@@ -17,7 +17,8 @@
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
         "lichtner/fluentpdo": "^1.1",
-        "firebase/php-jwt": "^4.0"
+        "firebase/php-jwt": "^4.0",
+        "phpmailer/phpmailer": "^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
